--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,13 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-calendar": "^4.1.0",
     "axios": "^1.6.2",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.5",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
     "uuid": "^9.0.1"
